[tool.poetry]
name = "firmsim"
version = "0.1.0"
description = "Simulador de Teoria da Firma para Microeconomia"
authors = ["Seu Nome <seu_email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
streamlit = "^1.29.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
plotly = "^5.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
