[tool.poetry]
name = "firmsim"
version = "0.1.0"
description = "Simulador de Teoria da Firma para Microeconomia"
authors = ["Lucas2726"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
streamlit = "*"
pandas = "*"
numpy = "*"
plotly = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
